# TilesetAnalyzer

./: .commit-message-format.md  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  First_RUN.md  LICENSE  README.md  makefile  process.py  pyproject.toml  requirements.txt  setup.py
.circleci/: README.md  config.yml
.github/scripts/: release.py
.github/workflows/: publish.yml  release.yml  semantic-release.yml
data_source/mbtiles/: mbtiles_utils.py
docs/: CIRCLECI_SETUP.md  CI_PLATFORM_COMPARISON.md  Development.md  RELEASE.md
documents/: Development.md
entities/: tileset_analysis_result.py
scripts/: release.sh
tileset_analyzer/: __debug__ .py  __main__.py  main.py  process.py
tileset_analyzer/api/: main_api.py
tileset_analyzer/api/tile_serve_source/: tile_serve_source_repository.py
tileset_analyzer/api/tile_serve_source/folder_tiles/: folder_serve_source.py
tileset_analyzer/api/tile_serve_source/mbtiles/: mbtiles_serve_source.py
tileset_analyzer/data_source/: ds_utils.py  tile_source.py
tileset_analyzer/data_source/folder_tiles/: folder_tiles_source.py  folder_utils.py
tileset_analyzer/data_source/mbtiles/: mbtiles_source.py  sql_queries.py
tileset_analyzer/entities/: job_param.py  layer_info.py  tileset_analysis_result.py  tileset_info.py
tileset_analyzer/readers/vector_tile/: engine.py  vector_tile_pb2.py
tileset_analyzer/utilities/: moniter.py
tileset_analyzer/utils/: json_utils.py
utils/: mbtiles_utils.py  sql_queries.py
webapp/tileset-analyzer-app/: .prettierignore  package-lock.json  package.json
webapp/tileset-analyzer-app/public/: index.html
webapp/tileset-analyzer-app/src/: AnalysisResult.ts  App.css  App.scss  App.test.tsx  App.tsx  index.css  index.scss  index.tsx  map.scss  reportWebVitals.ts
webapp/tileset-analyzer-app/src/Common/: common-components.tsx  localStorage.ts  property-filter.ts  use-local-storage.ts
webapp/tileset-analyzer-app/src/Error/: ErrorPage.tsx
webapp/tileset-analyzer-app/src/Info/: LayerInfo.tsx  TilesetInfo.tsx  TilesetMap.tsx
webapp/tileset-analyzer-app/src/Info/map/: MapCanvas.tsx  RenderPopup.ts
webapp/tileset-analyzer-app/src/Layout/: CustomBreadcrumb.tsx  LayoutPage.tsx  Settings.tsx
webapp/tileset-analyzer-app/src/Layout/Settings/: GeneralSettingsTab.tsx
webapp/tileset-analyzer-app/src/Metrics/: ChartProps.ts  LayerSizeTreePage.tsx  LayerTileSizePage.tsx  SizeConversions.ts  TileCountPage.tsx  TileSizePage.tsx
webapp/tileset-analyzer-app/src/Metrics/Support/: ChartProps.ts  NumberConverions.ts  SizeConversions.ts
webapp/tileset-analyzer-app/src/Store/: SettingsStore.ts
webapp/tileset-analyzer-app/src/Store/model/: SettingsState.ts
